# dailyDo-Todo-App

backend/dailyDo-Todo-App/: .env  Dockerfile  compose.yaml  pyproject.toml
backend/dailyDo-Todo-App/dailydo_todo_app/: auth.py  db.py  main.py  models.py  setting.py
backend/dailyDo-Todo-App/dailydo_todo_app/router/: user.py
backend/dailyDo-Todo-App/tests/: test_main.py
frontend/: .env  package-lock.json  package.json  types.d.ts
frontend/src/: middleware.ts
frontend/src/actions/: actions.ts  auth_actions.ts
frontend/src/app/: page.tsx
frontend/src/app/api/login/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AddTask.tsx  EditTask.tsx  Modal.tsx  SubmitButton.tsx  Task.tsx  TodoTable.tsx  ToolTip.tsx
frontend/src/utils/: token.ts  verifyToken.ts
