[tool.poetry]
name = "dailydo-todo-app"
version = "0.1.0"
description = ""
authors = ["Saad-Kamran-2006 <saadkamran6ft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"
httpx = "^0.27.0"
sqlmodel = "^0.0.21"
psycopg = {extras = ["binary"], version = "^3.2.1"}
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
